--- a/Help/css/main.scss
+++ b/Help/css/main.scss
@@ -90,9 +90,13 @@ nav {
 
 nav ul {
     list-style: none;
+	margin: 0;
 	li {
 		line-height: 1.3;
-		padding: 1em 0em 1em 0em;
+		padding: 1em 0em 1em 1em;
+		&.active {
+			background-color: $grey-color-light;
+		}
 	}
 }
 
