Added topic sorting, with a default topic order of 0 The default allows one to leave most topics with no order and use negative/large-positive order numbers to set intro/closing topics. The dummy Overview and Keyboard-Shortcuts are example intro/closing topics.

--- a/Help/_layouts/default.html
+++ b/Help/_layouts/default.html
@@ -18,7 +18,8 @@
 		
 		<nav>
 		<ul>
-			{% for topic in site.help_topics %}
+			{% assign sorted_topics = site.help_topics | sort: "order" %}
+			{% for topic in sorted_topics %}
 			<li {% if page.url == topic.url %}class="active"{% endif %}>
 				<a href="{{ page.rel_root }}{{ topic.url }}">{{ topic.title }}</a>
 			</li>
