--- a/Help/_layouts/default.html
+++ b/Help/_layouts/default.html
@@ -17,14 +17,21 @@
 	<body>
 		
 		<nav>
-		<ul>
-			{% assign sorted_topics = site.help_topics | sort: "order" %}
-			{% for topic in sorted_topics %}
-			<li {% if page.url == topic.url %}class="active"{% endif %}>
-				<a href="{{ page.rel_root }}{{ topic.url }}">{{ topic.title }}</a>
-			</li>
+			{% assign grouped_topics = site.help_topics | group_by: "category" | sort: "name" %}
+
+			<ul>
+			{% for group in grouped_topics %}
+			{% assign sorted_topics = group.items | sort: "order" %}
+			{% if group.name != "" %}<li><a>{{ group.name }}</a><ul>{% endif %}
+				{% for topic in sorted_topics %}
+				<li {% if page.url == topic.url %}class="active"{% endif %}>
+					<a href="{{ page.rel_root }}{{ topic.url }}">{{ topic.title }}</a>
+				</li>
+				{% endfor %}
+			{% if group.name != "" %}</ul></li>{% endif %}
 			{% endfor %}
-		</ul>
+			</ul>
+
 		</nav>
 		
 		<div class="page-content">
