--- a/Help/css/main.scss
+++ b/Help/css/main.scss
@@ -15,7 +15,7 @@ $spacing-unit:     30px;
 
 $text-color:       #484848;
 $background-color: #ffffff;
-$brand-color:      $text-color;
+$brand-color:      #007aff;
 
 $grey-color:       #828282;
 $grey-color-light: lighten($grey-color, 40%);
@@ -64,9 +64,27 @@ html, body {
 	font-weight: normal;
 }
 
+// Match h1 to Apple
+h1 {
+	font-size: 27px;
+	line-height: 1.2;
+	margin-bottom: 1em;
+}
+
+// Match icon to Apple
+.bookIcon {
+	float: left;
+	position: relative;
+	top: 1px;
+	padding-right: 10px;
+}
+
 // Match anchor styles to Apple
 a {
 	&:hover {
+		color: $brand-color;
+	}
+	&:visited {
 		color: $brand-color;
 	}
 }
@@ -103,11 +121,12 @@ nav ul a {
 	display: block;
 	padding: 0.5em 0em 0.5em 1em;
 	color: $text-color;
-	&:hover {
-		text-decoration: none;
-	}
 	&:visited {
 		color: $text-color;
+	}
+	&:hover {
+		text-decoration: none;
+		color: $brand-color;
 	}
 }
 
