--- a/Help/_layouts/help.html
+++ b/Help/_layouts/help.html
@@ -2,6 +2,6 @@
 layout: default
 ---
 
-<img class="bookIcon" src="{{ page.rel_root }}/book-icon.png" alt height="30" width="30"/><h1>{{ page.title }}</h1>
+<img class="bookIcon" src="{{ page.rel_root }}/book-icon.png" alt="" height="30" width="30"/><h1>{{ page.title }}</h1>
 
 {{ content }}
