--- a/Help/css/main.scss
+++ b/Help/css/main.scss
@@ -53,7 +53,8 @@ $on-laptop:        800px;
 // Splash Screen
 .splash {
     text-align: center;
-	img { height: 20em; width: 20em; }
+	h1 { font-size: 39px; }
+	img { height: 190px; width: 190px; }
 }
 
 html, body {
@@ -135,8 +136,8 @@ nav ul ul a {
 }
 
 article {
-	max-width: 45em;
-	padding: 4em 2em 2em 5em;
+	max-width: 596px;
+	padding: 75px 63px;
 }
 
 table {
