Rename 'appletitle' variable to 'apple_title' to better match Jekyll conventions Apple's camelCase 'AppleTitle' is now converted to Jekyll's underscore_case 'apple_title'

--- a/Help/_layouts/default.html
+++ b/Help/_layouts/default.html
@@ -8,7 +8,7 @@
 
 		<title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
 
-		{% if page.appletitle %}<meta name="AppleTitle" content="{{ page.appletitle }}"/>{% endif %}
+		{% if page.apple_title %}<meta name="AppleTitle" content="{{ page.apple_title }}"/>{% endif %}
 		
 		{% if page.description %}<meta name="description" content="{{ page.description }}"/>{% endif %}
 
