--- a/XynkHelp/_layouts/title-page.html
+++ b/XynkHelp/_layouts/title-page.html
@@ -4,7 +4,7 @@ layout: default
 
 <div class="splash">
 	
-	<h1>{{ page.title }}</h1>
+	<h1><a name="TitlePage"></a>{{ page.title }}</h1>
 	
 	<img src="{{ page.rel_root }}/book-icon.png"/>
 	
