Cleanup and Reorg of Styling and Navigation - Reorganized apple-help styles to be more sassy and grouped by function. - Reworked navigation js/markup/css to avoid FOUC (flash of unstyled content) and be more robust thru the use of id/class/name labels. - Added class-attr based on template name to default's main element to support per-template styling. - Added styles for category/group revelation triangles. - Switched title-page template to use more semantic markup/css. - Renamed help template to help-page to match others.

--- a/XynkHelp/_includes/header.html
+++ b/XynkHelp/_includes/header.html
@@ -1,15 +1,14 @@
-<header>
+<header class="banner">
 	{% comment %}
 	Apple Help's hiutil doesn't index text inside NAV elements, however it only applies to immediate text (a bug?).
 	Thus, all text inside this NAV section is also tightly wrapped with NAVs to prevent indexing.
 	{% endcomment %}
-	<nav>
+	<nav id="menu" class="dynamic">
 		{% assign grouped_topics = site[page.collection] | group_by: "category" | sort: "name" %}
-		
 		<ul>
 			{% for group in grouped_topics %}
 			{% assign sorted_topics = group.items | sort: "order" %}
-			{% if group.name != "" %}<li><a class="group"><nav>{{ group.name }}</nav></a><ul>{% endif %}
+			{% if group.name != "" %}<li class="group"><a name="name"><nav>{{ group.name }}</nav></a><ul name="list">{% endif %}
 				{% for topic in sorted_topics %}{% if topic.apple_title == null %}
 				<li{% if page.url == topic.url %} class="active"{% endif %}>
 					<a href="{{ page.rel_root }}{{ topic.url }}"><nav>{{ topic.title }}</nav></a>
