--- a/XynkHelp/_layouts/title-page.html
+++ b/XynkHelp/_layouts/title-page.html
@@ -2,12 +2,9 @@
 layout: default
 ---
 
-<div class="splash">
-	
+<header>
 	<h1><a name="TitlePage"></a>{{ page.title }}</h1>
-	
-	<img src="{{ page.rel_root }}/book-icon.png"/>
-	
-</div>
+	<img src="{{ page.rel_root }}/book-icon.png" alt="" height="190" width="190"/>
+</header>
 
 {{ content }}
