--- a/XynkHelp/_sass/_apple-help.scss
+++ b/XynkHelp/_sass/_apple-help.scss
@@ -1,9 +1,4 @@
-// Splash Screen
-.splash {
-    text-align: center;
-	h1 { font-size: 39px; }
-	img { height: 190px; width: 190px; }
-}
+// Overall page structure
 
 html, body {
     height: 100%;
@@ -13,37 +8,10 @@ html, body {
 	font-weight: normal;
 }
 
-// Match h1 to Apple
-h1 {
-	font-size: 27px;
-	line-height: 1.2;
-	margin-bottom: 1em;
-}
-
-// Match icon to Apple
-.bookIcon {
-	float: left;
-	position: relative;
-	top: 1px;
-	padding-right: 10px;
-}
-
-// Match anchor styles to Apple
-a {
-	&:hover {
-		color: $brand-color;
-	}
-	&:visited {
-		color: $brand-color;
-	}
-}
-
-// Match header and main to Apple
-header {
+header.banner {
 	position: fixed;
 	top: 0;	left: 0; bottom: 0;	width: 210px;
 	overflow-y: auto;
-	
 	border-right: 1px solid $grey-color-light;
 }
 
@@ -51,49 +19,103 @@ main {
 	position: fixed;
 	top: 0; bottom: 0; left: 210px; right: 0;
 	overflow-y: auto;
-	
+	max-width: 596px;
+	padding: 75px 63px;
 }
 
-nav ul {
-    list-style: none;
-	margin: 0;
-	padding-top: 0.5em;
+// Styling of the main content for Jekyll layouts
+
+main.title-page {
+	header {
+		text-align: center;
+		h1 { font-size: 39px; }
+	}
+}
+
+main.help-page {
+	h1 {
+		font-size: 27px;
+		line-height: 1.2;
+		margin-bottom: 1em;
+		&::before {
+			background-image: url('../book-icon.png');
+			background-size: 30px 30px;
+			content:"";
+			display: inline-block;
+			height: 30px; width: 30px;
+			margin: 0 10px -5px 0;
+		}
+	}
+}
+
+
+// Simple element styling
+
+a {
+	&:hover, &:visited {
+		color: $brand-color;
+	}
+}
+
+table {
+	width: 100%;
+}
+
+
+// Navigation Menu styles
+
+nav#menu {
+    
+    ul {
+		list-style: none;
+		margin: 0;
+		padding-top: 0.5em;
+	}
+
 	li {
 		line-height: 17px;
 		&.active {
 			background-color: $grey-color-light;
 		}
+		&.group::before {
+			position: absolute;
+			margin: 0.5em 0 0 1em;
+			font-size: 75%;
+			content: "▼"; display: inline; color: $grey-color;
+		}
+		&.group.collapsed::before {
+			content: "▶";
+		}
+	}
+
+	a {
+		display: block;
+		padding: 0.5em 0em 0.5em 2em;
+		color: $text-color;
+		&:visited {
+			color: $text-color;
+		}
+		&:hover {
+			text-decoration: none;
+			color: $brand-color;
+		}
+	}
+	
+	ul ul a {
+		padding-left: 2em;
 	}
 }
 
-.animate nav ul {
+
+// Animated Dynamic menu styles
+
+// Hide dynamic content, if Javascript is available.
+.js .dynamic {
+	visibility: hidden;
+}
+
+.animate ul {
+	visibility: visible;
 	overflow: hidden;
 	transition: max-height 0.3s ease-in-out;
-}
-
-
-nav ul a {
-	display: block;
-	padding: 0.5em 0em 0.5em 1em;
-	color: $text-color;
-	&:visited {
-		color: $text-color;
-	}
-	&:hover {
-		text-decoration: none;
-		color: $brand-color;
-	}
-}
-
-nav ul ul a {
-	padding-left: 2em;
-}
-
-article {
-	max-width: 596px;
-	padding: 75px 63px;
-}
-
-table {
-    width: 100%;
 }
