--- a/XynkHelp/_includes/header.html
+++ b/XynkHelp/_includes/header.html
@@ -4,19 +4,30 @@
 	Thus, all text inside this NAV section is also tightly wrapped with NAVs to prevent indexing.
 	{% endcomment %}
 	<nav id="menu" class="dynamic">
-		{% assign grouped_topics = site[page.collection] | group_by: "category" | sort: "name" %}
+		{% assign title_page = site[page.collection] | has: "group_order" | first %}
+		{% assign topics_tree = site[page.collection] | tree_by_with_prop_lookup: "category", "order", title_page.group_order | sort: "name" | reverse | sort: "order" %}
 		<ul>
-			{% for group in grouped_topics %}
-			{% assign sorted_topics = group.items | sort: "order" %}
-			{% if group.name != "" %}<li class="group"><a name="name"><nav>{{ group.name }}</nav></a><ul name="list">{% endif %}
-				{% for topic in sorted_topics %}{% if topic.menu_exclude != true %}
-				<li{% if page.url == topic.url %} class="active"{% endif %}>
-					<a href="{{ page.rel_root }}{{ topic.url }}"><nav>{{ topic.title }}</nav></a>
+		{% for node in topics_tree %}
+			{% if node.name %}
+				{% assign sorted_topics = node.items | sort: "order" %}
+				<li class="group">
+					<a name="name"><nav>{{ node.name }}</nav></a>
+					<ul name="list">
+					{% for topic in sorted_topics %}{% if topic.menu_exclude != true %}
+						<li{% if page.url == topic.url %} class="active"{% endif %}>
+							<a href="{{ page.rel_root }}{{ topic.url }}"><nav>{{ topic.title }}</nav></a>
+						</li>
+					{% endif %}{% endfor %}
+					</ul>
 				</li>
-				{% endif %}{% endfor %}
-				{% if group.name != "" %}</ul></li>{% endif %}
-			{% endfor %}
+			{% else %}
+				{% if node.menu_exclude != true %}
+				<li{% if page.url == node.url %} class="active"{% endif %}>
+					<a href="{{ page.rel_root }}{{ node.url }}"><nav>{{ node.title }}</nav></a>
+				</li>
+				{% endif %}
+			{% endif %}
+		{% endfor %}
 		</ul>
-		
 	</nav>
 </header>
