--- a/XynkHelp/_layouts/help-page.html
+++ b/XynkHelp/_layouts/help-page.html
@@ -2,6 +2,6 @@
 layout: default
 ---
 
-<h1>{{ page.title }}</h1>
+<h1>{% if page.anchor %}<a name="{{ page.anchor }}"></a>{% endif %}{{ page.title }}</h1>
 
 {{ content }}
