--- a/XynkHelp/_layouts/default.html
+++ b/XynkHelp/_layouts/default.html
@@ -2,9 +2,9 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 	{% include head.html %}
-	<body>
+	<body class="{{ page.layout }}">
 		{% include header.html %}
-		<main class="{{ page.layout }}">
+		<main>
 			{{ content }}
 		</main>
 		{% include footer.html %}
