--- a/XynkHelp/_sass/_apple-help.scss
+++ b/XynkHelp/_sass/_apple-help.scss
@@ -1,3 +1,23 @@
+
+/*
+
+Tip: How to examine Apple's help CSS
+
+The HelpViewer doesn't allow one to inspect pages, but all of Yosemite's help is available online.
+Use the share button to get URLs. For example:
+
+https://help.apple.com/safari/mac/8.0/index.html?localePath=en.lproj
+
+The online help uses different styling then in HelpViewer.
+To get the online help to render identically, use Safari's Inspector to:
+
+- Change html element class 'is-not-hv' to 'is-hv'
+- Delete the banner at html > body > div > header
+
+Now the page looks/works the same as in HelpViewer (except for responsive styles).
+
+*/
+
 // Overall page structure
 
 html, body {
