--- a/XynkHelp/_layouts/title-page.html
+++ b/XynkHelp/_layouts/title-page.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <header>
-	<h1><a name="TitlePage"></a>{{ page.title }}</h1>
+	<h1><a name="title-page"></a>{{ page.title }}</h1>
 	<img src="{{ page.rel_root }}/book-icon.png" alt="" height="190" width="190"/>
 </header>
 
