--- a/JekyllHelp/css/main.scss
+++ b/JekyllHelp/css/main.scss
@@ -3,48 +3,19 @@
 ---
 @charset "utf-8";
 
-// Our variables
-$base-font-family: HelveticaNeue, 'Helvetica Neue', Helvetica, sans-serif;
-$base-font-size:   12px;
-$small-font-size:  $base-font-size * 0.875;
-$base-line-height: 1.5;
+// Default variables that can be overridden
 
-$spacing-unit:     30px;
+// $base-font-family: HelveticaNeue, 'Helvetica Neue', Helvetica, sans-serif;
+// $base-font-size:   12px;
+// $small-font-size:  $base-font-size * 0.875;
+// $base-line-height: 1.5;
 
-$text-color:       #484848;
-$background-color: #ffffff;
-$brand-color:      #007aff;
+// $spacing-unit:     30px;
 
-$grey-color:       #828282;
-$grey-color-light: lighten($grey-color, 40%);
-$grey-color-dark:  darken($grey-color, 25%);
+// $text-color:       #484848;
+// $background-color: #ffffff;
+// $brand-color:      #007aff;
 
-// Width of the content area
-$content-width:    800px;
+// Import apple-help styles from `sass_dir` (defaults to `_sass`)
+@import "apple-help";
 
-$on-palm:          600px;
-$on-laptop:        800px;
-
-
-
-// Using media queries with like this:
-// @include media-query($on-palm) {
-//     .wrapper {
-//         padding-right: $spacing-unit / 2;
-//         padding-left: $spacing-unit / 2;
-//     }
-// }
-@mixin media-query($device) {
-@media screen and (max-width: $device) {
-@content;
-}
-}
-
-
-
-// Import partials from `sass_dir` (defaults to `_sass`)
-@import
-"base",
-"syntax-highlighting",
-"apple-help"
-;
