Added print styles.

--- a/JekyllHelp/_sass/_apple-help.scss
+++ b/JekyllHelp/_sass/_apple-help.scss
@@ -49,6 +49,10 @@ html, body {
     overflow: auto;
 	-webkit-font-smoothing: antialiased;
 	font-weight: normal;
+
+	@media print {
+		height: auto;
+	}
 }
 
 body {
@@ -65,7 +69,12 @@ header.banner {
 	border-right: 1px solid $grey-color-light;
 	z-index: 1;
 	background-color: white;
+
+	@media print {
+		display: none;
+	}
 }
+
 
 main {
 	position: absolute;
@@ -73,6 +82,10 @@ main {
 	overflow-y: auto;
 	padding: 50px 63px;
 	background-color: white;
+
+	@media print {
+		position: static;
+	}
 }
 
 // Minimal responsiveness
