Added experimental support for HelpViewer Table-of-Contents button - Added code to toggle banner-menu visibility via undocumented HelpViewer calls. - Adjusted style to use 'show-banner' class to control banner visibility. - Added 'class' extension to default template. - Switched title-page to use initial 'show-banner' class to force display of TOC.

--- a/JekyllHelp/_layouts/default.html
+++ b/JekyllHelp/_layouts/default.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 	{% include head.html %}
-	<body class="{{ page.layout }}">
+	<body class="{{ page.layout }}{% if page.class %} {{ page.class }}{% endif %}">
 		{% include header.html %}
 		<main>
 			{{ content }}
