--- a/MyApp Example/MyAppHelp/_includes/footer.html
+++ b/MyApp Example/MyAppHelp/_includes/footer.html
@@ -2,4 +2,5 @@
 Apple Help's hiutil doesn't index text inside FOOTER elements, see comment in header.html for details.
 {% endcomment %}
 <footer>
+    asdfasdf
 </footer>
